--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,55 @@
-click==8.1.4
-Faker==18.13.0
-Flask==2.3.2
-seleniumbase==4.15.13
-setuptools==68.0.0
-Werkzeug==2.3.6
+aiohttp==3.8.5
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
+async-timeout==4.0.2
+attrs==23.1.0
 bandit==1.7.5
+blinker==1.6.2
+certifi==2023.5.7
+charset-normalizer==3.2.0
+click==8.1.7
+distlib==0.3.7
+filelock==3.12.2
+Flask==2.3.2
+Flask-Login==0.6.2
+Flask-SQLAlchemy==3.0.5
+Flask-WTF==1.1.1
+frozenlist==1.4.0
+gitdb==4.0.10
+GitPython==3.1.37
+idna==3.4
+iniconfig==2.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+mdurl==0.1.2
+multidict==6.0.4
+openai==0.28.1
+packaging==23.1
+pbr==5.11.1
+pipenv==2023.7.23
+platformdirs==3.10.0
+pluggy==1.2.0
+psycopg2==2.9.7
+Pygments==2.16.1
+PyJWT==2.8.0
+pytest==7.4.0
+pytube==15.0.0
+pytube3==9.6.4
+pytz==2023.3
+PyYAML==6.0.1
+requests==2.31.0
+rich==13.6.0
+smmap==5.0.1
+SQLAlchemy==2.0.20
+stevedore==5.1.0
+tqdm==4.66.1
+twilio==8.5.0
+typing_extensions==4.7.1
+urllib3==2.0.4
+virtualenv==20.24.2
+virtualenv-clone==0.5.7
+Werkzeug==2.3.7
+WTForms==3.0.1
+yarl==1.9.2
