--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,24 @@
-aiohttp==3.8.5
-aiohttp-retry==2.8.3
-aiosignal==1.3.1
-async-timeout==4.0.2
 attrs==23.1.0
 bandit==1.7.5
-blinker==1.6.2
-certifi==2023.5.7
+beautifulsoup4==4.12.2
+behave==1.2.6
+blinker==1.6.3
+certifi==2023.7.22
+chardet==5.1.0
 charset-normalizer==3.2.0
-click==8.1.7
-distlib==0.3.7
-filelock==3.12.2
+click==8.1.4
+colorama==0.4.6
+cssselect==1.2.0
+exceptiongroup==1.1.2
+execnet==2.0.2
+Faker==18.13.0
+fasteners==0.18
+filelock==3.12.4
 Flask==2.3.2
-Flask-Login==0.6.2
-Flask-SQLAlchemy==3.0.5
-Flask-WTF==1.1.1
-frozenlist==1.4.0
+Flask-WTF==1.2.1
 gitdb==4.0.10
 GitPython==3.1.37
+h11==0.14.0
 idna==3.4
 iniconfig==2.0.0
 itsdangerous==2.1.2
@@ -24,32 +26,44 @@ Jinja2==3.1.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 mdurl==0.1.2
-multidict==6.0.4
-openai==0.28.1
-packaging==23.1
+outcome==1.2.0
+packaging==23.2
+parameterized==0.9.0
+parse==1.19.1
+parse-type==0.6.2
 pbr==5.11.1
-pipenv==2023.7.23
-platformdirs==3.10.0
+pdbp==1.4.2
+platformdirs==3.11.0
 pluggy==1.2.0
-psycopg2==2.9.7
-Pygments==2.16.1
-PyJWT==2.8.0
+py==1.11.0
+Pygments==2.15.1
+pynose==1.4.6
+pyotp==2.8.0
+PySocks==1.7.1
 pytest==7.4.0
-pytube==15.0.0
-pytube3==9.6.4
-pytz==2023.3
+pytest-html==2.0.1
+pytest-metadata==3.0.0
+pytest-ordering==0.6
+pytest-rerunfailures==12.0
+pytest-xdist==3.3.1
+python-dateutil==2.8.2
+python-dotenv==1.0.0
 PyYAML==6.0.1
 requests==2.31.0
-rich==13.6.0
+rich==13.4.2
+sbvirtualdisplay==1.2.0
+selenium==4.10.0
+seleniumbase==4.15.13
+six==1.16.0
 smmap==5.0.1
-SQLAlchemy==2.0.20
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.4.1
 stevedore==5.1.0
-tqdm==4.66.1
-twilio==8.5.0
-typing_extensions==4.7.1
-urllib3==2.0.4
-virtualenv==20.24.2
-virtualenv-clone==0.5.7
-Werkzeug==2.3.7
-WTForms==3.0.1
-yarl==1.9.2
+tabcompleter==1.2.1
+trio==0.22.1
+trio-websocket==0.10.3
+urllib3==2.0.6
+Werkzeug==2.3.6
+wsproto==1.2.0
+WTForms==3.1.0
